# Music-Playlist--Optimization-System

backend-cpp/: CMakeLists.txt  Makefile  test.json
backend-cpp/src/: AStar.cpp  AStar.h  Dijkstra.cpp  Dijkstra.h  Graph.cpp  Graph.h  Kruskal.cpp  Kruskal.h  MST.cpp  MST.h  SongDatabase.h  TSP.cpp  TSP.h  TwoOpt.cpp  TwoOpt.h  main.cpp
frontend/: input.json  output.json  package-lock.json  server.js
frontend/public/: index.html
frontend/src/: App.css  App.js
frontend/src/components/: Controls.css  Controls.js  Results.css  Results.js
